--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,8 +2,9 @@
 local_backend: true
 
 backend:
-  name: git-gateway
-  branch: main
+  name: github
+  repo: nicksalt/ttpl
+
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
@@ -25,12 +26,46 @@ collections:
     label: "Events"
     folder: "content/events"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
-      - { label: "Event Date", name: "date", widget: "datetime" }
+      - { label: "Date", name: "date", widget: "datetime" }
       - { label: "Image", name: "image", widget: "image" }
-      - { label: "Link", name: "link", widget: "string" }
+      - { label: "Link", name: "link", widget: "string", required: false }
+
+  - name: "activities"
+    label: "Activities"
+    folder: "content/activities"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Description", name: "description", widget: "text" }
+      - { label: "Image", name: "image", widget: "image" }
+      - { label: "Schedule", name: "schedule", widget: "string" }
+
+  - name: "featured"
+    label: "Featured Content"
+    folder: "content/featured"
+    create: true
+    slug: "featured"
+    fields:
+      - label: "Featured Events"
+        name: "featured_events"
+        widget: "relation"
+        collection: "events"
+        search_fields: ["title"]
+        value_field: "title"
+        multiple: true
+
+      - label: "Featured Activities"
+        name: "featured_activities"
+        widget: "relation"
+        collection: "activities"
+        search_fields: ["title"]
+        value_field: "title"
+        multiple: true
+
 
   # Add additional collections (activities, resources, faq, etc.) as needed.
