--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^22.13.9",
 		"autoprefixer": "^10.4.20",
@@ -40,6 +41,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"gray-matter": "^4.0.3"
+		"gray-matter": "^4.0.3",
+		"marked": "^15.0.7"
 	}
 }
