--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,15 +16,28 @@ collections:
   # HOME
   - name: "homepage"
     label: "Homepage - Items"
-    folder: "content/homepage"
+    description: "These are the items that appear on the bottom of the homepage."
+    folder: "content/homepage-items"
     create: true
     slug: "{{slug}}"
     fields:
+      - { label: "Order On Homepage", name: "order", widget: "number", required: true, hint: "This will determine the order in which items appear on the homepage." }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Image", name: "image", widget: "image" }
-      - { label: "Button Text", name: "buttonText", widget: "string", required: false }
+      - { label: "Button Text", name: "buttonText", widget: "string", required: false, hint: "Optional. If not set and a link is set, the button text will default to 'Learn More'" }
       - { label: "Button URL", name: "buttonUrl", widget: "string", required: false }
+      # Create a select option for image orientation: top, left, right, bottom
+      # Explan to the user that this will determine the layout of the image relative to the text
+      - label: "Image Orientation"
+        name: "imageOrientation"
+        widget: "select"
+        hint: "This will determine the layout of the image relative to the text."
+        options:
+          - { label: "Top", value: "top" }
+          - { label: "Left", value: "left" }
+          - { label: "Right", value: "right" }
+          - { label: "Bottom", value: "bottom" }
 
   - name: "featured"
     label: "Homepage - Featured Events and Activities"
