--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-preprocess": "^6.0.3",
+		"svelte-seo": "^1.6.1",
 		"tailwindcss": "^4.0.12",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
