--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	"dependencies": {
 		"dayjs": "^1.11.13",
 		"gray-matter": "^4.0.3",
-		"marked": "^15.0.7"
+		"marked": "^15.0.7",
+		"posthog-js": "^1.232.4"
 	}
 }
