--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -170,7 +170,7 @@ collections:
     editor:
       preview: false
     fields:
-      - { label: "Text", name: "text", widget: "text" }
+      - { label: "Text", name: "text", widget: "markdown", required: true, hint: "Supports rich text formatting, including bolding, new lines, and hyperlinks." }
       - { label: "Start Date", name: "startDate", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false, required: false, hint: "Optional. If set, the alert will only show after this date. Otherwise, it will show immediately." }
       - { label: "End Date", name: "endDate", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false, required: false, hint: "Optional. If set, the alert will only show until this date. Otherwise, it will show indefinitely until updated." }
       - label: "Color"
