--- a/traffic.env
+++ b/traffic.env
@@ -1,4 +1,4 @@
 GIT_ACCESS_TOKEN=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
-GIT_REPO_NAME=your_repo_name
-GIT_REPO_OWNER=your_repo_owner
+GIT_REPO_NAME=ttpl
+GIT_REPO_OWNER=nicksalt
 GIT_FILE_PATH=path/to/your/file
