--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-
+GIT_ACCESS_TOKEN=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
+GIT_REPO_NAME=ttpl
+GIT_REPO_OWNER=nicksalt
+GIT_FILE_PATH=src/traffic/map-count-0.md
